introduce profile modify strategy

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES main.cpp open_list_data.cpp open_list_data.h)
 add_executable(src ${SOURCE_FILES})
+add_executable(mytest test/test_main.cpp)
