--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES main.cpp open_list_party.cpp open_list_party.h open_list_solver.cpp open_list_solver.h)
 add_executable(src ${SOURCE_FILES})
-add_executable(mytest test/test_main.cpp)
-add_executable(mytest2 test/test_main2.cpp)
+add_executable(mytest test/test_compute_payoff.cpp)
+add_executable(mytest2 test/test_init_alternatives.cpp)
