fix a bug in non-brutal-force algorithm and pass the test by burte force

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,5 +8,5 @@ add_executable(mytest2 test/deprecated/test_init_alternatives.cpp)
 
 set(SOURCE_FILES open_list_party.cpp open_list_party.h open_list_solver.cpp open_list_solver.h open_list_includes.h open_list_input_output.h open_list_input_output.cpp)
 set(TEST_FILES test/test_unit.cpp test/test_unit.h)
-add_executable(src ${SOURCE_FILES} main.cpp)
+add_executable(hklc ${SOURCE_FILES} main.cpp)
 add_executable(mymaintest test/test_main.cpp ${SOURCE_FILES} ${TEST_FILES})
