modify to make it memory efficient

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,8 +7,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "/home/cheyulin/Gitrepos/Open-List-Proportion
 #add_executable(mytest2 test/deprecated/test_init_alternatives.cpp)
 
 set(SOURCE_FILES open_list_party_basic_info.h open_list_party_basic_info.cpp open_list_party.cpp open_list_party.h open_list_solver.cpp open_list_solver.h open_list_includes.h open_list_input_output.h open_list_input_output.cpp)
-#set(TEST_FILES test/test_unit.cpp test/test_unit.h)
+set(TEST_FILES test/test_unit.cpp test/test_unit.h)
 add_executable(hklc ${SOURCE_FILES} main.cpp)
-#add_executable(hklctest test/test_main.cpp ${SOURCE_FILES} ${TEST_FILES})
+add_executable(hklctest test/test_main.cpp ${SOURCE_FILES} ${TEST_FILES})
 
 
